tests/spec/non_conformant/errors/import/file/mixin/control_else/outside.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/import/file/mixin/control-else/outside.hrx"

// Ignoring "test", error tests are not supported yet.
